Enhance room listing to include all rooms regardless of visibility and lifecycle status